# grokking-transformer

./: .gitignore  README.md  pyproject.toml  reproduce.sh  requirements.txt
experiments/: attention_pattern.py  dropout_control.py  embedding_circle.py  fourier.py  head_count.py  logit_attribution.py  lr_sweep.py  modulus_scaling.py  operations.py  plots.py  progress_measures.py  reproduce_figures.py  run_sweep.py  wd_scope.py
grokking/: __init__.py  aggregate.py  checkpoints.py  data.py  model.py  progress.py  train.py
runs/: p113_frac0.30_wd1_seed0.csv  p113_frac0.30_wd1_seed0.json  p97_frac0.25_wd1_seed0.csv  p97_frac0.25_wd1_seed0.json  p97_frac0.25_wd1_seed1.csv  p97_frac0.25_wd1_seed1.json  p97_frac0.25_wd1_seed2.csv  p97_frac0.25_wd1_seed2.json  p97_frac0.25_wd1_seed3.csv  p97_frac0.25_wd1_seed3.json  p97_frac0.25_wd1_seed4.csv  p97_frac0.25_wd1_seed4.json  p97_frac0.30_wd0.1_seed0.csv  p97_frac0.30_wd0.1_seed0.json  p97_frac0.30_wd0.1_seed0_opmul.csv  p97_frac0.30_wd0.1_seed0_opmul.json  p97_frac0.30_wd0.1_seed0_opsub.csv  p97_frac0.30_wd0.1_seed0_opsub.json  p97_frac0.30_wd0.1_seed1.csv  p97_frac0.30_wd0.1_seed1.json  p97_frac0.30_wd0.1_seed2.csv  p97_frac0.30_wd0.1_seed2.json  p97_frac0.30_wd0.1_seed3.csv  p97_frac0.30_wd0.1_seed3.json  p97_frac0.30_wd0.1_seed4.csv  p97_frac0.30_wd0.1_seed4.json  p97_frac0.30_wd0_seed0.csv  p97_frac0.30_wd0_seed0.json  p97_frac0.30_wd0_seed0_do0.1.csv  p97_frac0.30_wd0_seed0_do0.1.json  p97_frac0.30_wd0_seed1.csv  p97_frac0.30_wd0_seed1.json  p97_frac0.30_wd0_seed2.csv  p97_frac0.30_wd0_seed2.json  p97_frac0.30_wd0_seed3.csv  p97_frac0.30_wd0_seed3.json  p97_frac0.30_wd0_seed4.csv  (+39 more)
(+29 files in other folders)
